# LittleAlchemy2Text_MCP

./: .gitignore  GYMNASIUM_UPGRADE_COMPLETE.md  LOGGING_KEY_CHEATSHEET.md  MCP_INTEGRATION_SUMMARY.md  README.md  README_MCP.md  VARIABLE_CHEATSHEET.md  adaptation_metrics.csv  analysis.ipynb  app.py  combine_test_data.py  combined_attempts.csv  combined_sessions.csv  detailed_phase_analysis.csv  detailed_session_metrics.csv  effect_sizes_analysis.csv  element_usage_diversity_metrics.csv  environment.yml  exploration_features_with_clusters.csv  exploration_metrics.csv  final_items.json  full_temporal_data.csv  game_phase_performance.csv  master_dataset.json  mcp_config.json  mcp_demo_simple.py  mcp_server.py  multiple_comparisons_results.csv  multiple_comparisons_summary.csv  network_centrality_metrics.csv  network_metrics.csv  phase_summary_statistics.csv  plateau_length_tests.csv  play.py  pyproject.toml  reasoning_quality_scores.csv  recovery_analysis_results.csv  recovery_statistical_tests.csv  requirements.txt  strategic_element_metrics.csv  (+6 more)
env/little_alchemy_2_text/: base.py
env/little_alchemy_2_text/openended/: env.py  recipe_book.py
env/little_alchemy_2_text/targeted/: env.py  recipe_book.py
env/wordcraft/utils/: word2feature.py
env/wordcraft/wordcraft/: env.py  recipe_book.py
tests/: all_attempts_data.csv  all_sessions_data.csv
tests/abductive/: 0.md  1.md  2.md  3.md  4.md
tests/attempts_data/: baseline_attempts.csv  conterfactual_attempts.csv  first_principles_attempts.csv  heuristic_attempts.csv
tests/baseline/: 0.md  1.md  2.md  3.md
tests/conterfactual/: 0.md  1.md  2.md  3.md  4.md  5.md
tests/first principles/: 0.md  1.md  2.md  3.md  4.md
tests/heuristic/: 0.md  1.md  2.md  3.md  4.md
tests/sessions_data/: abductive_sessions.csv  baseline_sessions.csv  conterfactual_sessions.csv  first_principles_sessions.csv  heuristic_sessions.csv
(+54 files in other folders)
